--- a/llm_ui/src/components/footerBottom/FooterBottom.css
+++ b/llm_ui/src/components/footerBottom/FooterBottom.css
@@ -1,11 +1,13 @@
 .footerBottom {
     position: absolute;
+    font-size: large;
     left: 0;
     height: 7%;
     width: 100%;
     margin-top: 10px;
+    padding-left: 85%;
     text-align: center;
-    background-color: rgba(48, 143, 156, 1); 
+    background-color: rgba(48, 143, 156, 1);
     color: white;
 }
   
